<resources>
    <string name="app_name">WongFah</string>

    <string name="str_categories">Categories</string>
    <string name="txt_select">Tap on menu card to add to order list</string>
    <string name="str_your_orders">Your orders</string>
    <string name="str_sub_total">Sub-total</string>
    <string name="str_vat_7">Vat 7%</string>
    <string name="str_service_charge_10">Service charge 10%</string>
    <string name="str_total">Total</string>
    <string name="str_baht">฿</string>
    <string name="str_complete_order">COMPLETE ORDER</string>
    <string name="str_checkout">CHECKOUT</string>
    <string name="str_close">CLOSE</string>
    <string name="str_we_have_received_your_orders">We have received your orders.</string>
    <string name="str_thank_you_and_please_come_again">Thank you and please come again. :)</string>
    <string name="str_please_select_foods">Please select a food item.</string>
    <string name="str_delete">Delete</string>
</resources>
